rename & 2nd project

--- a/Kompression/Kompression.vcxproj
+++ b/Kompression/Kompression.vcxproj
@@ -19,12 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
+    <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{aad2b686-4486-4585-b31f-f9fbd9b7a333}</ProjectGuid>
-    <RootNamespace>Textdaten</RootNamespace>
+    <ProjectGuid>{75c16b64-352d-4693-a27d-b7a67db28951}</ProjectGuid>
+    <RootNamespace>Kompression</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Textdatenanalyse</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main_text.cpp" />
+    <ClCompile Include="main_comp.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
