--- a/Kompression/Kompression.vcxproj
+++ b/Kompression/Kompression.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LZ77.cpp" />
     <ClCompile Include="LZW.cpp" />
     <ClCompile Include="main_comp.cpp" />
     <ClCompile Include="Menu.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="LZ77.h" />
     <ClInclude Include="LZW.h" />
     <ClInclude Include="Menu.h" />
   </ItemGroup>
