--- a/Kompression/Kompression.vcxproj.filters
+++ b/Kompression/Kompression.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Menu.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="LZ77.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LZW.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Menu.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="LZ77.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
