--- a/Kompression/Kompression.vcxproj.filters
+++ b/Kompression/Kompression.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="LZ77.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Huffman.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LZW.h">
@@ -36,6 +39,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="LZ77.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Huffman.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
