--- a/Kompression/Kompression.vcxproj
+++ b/Kompression/Kompression.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="LZ77.h" />
     <ClInclude Include="LZW.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="os.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
