--- a/Kompression/Kompression.vcxproj.filters
+++ b/Kompression/Kompression.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Huffman.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="os.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
